--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "build-control",
   "private": true,
-  "homepage": "https://LDmitry5.github.io/build-control",
+  "homepage": "https://LDmitry5.github.io/build-control/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
